
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.1-rc1
====================================
- [#MODX-2303] Fixed issue where resource editing pages were not respecting context settings
- [#MODX-2302] Fixed issue with loading of input option values in TV related to optimizations in 2.0.1
- [#MODX-2297] Fixed output filters limit/ellipsis when dealing with special character cases
- [#MODX-2290] Added image preview when hovering over images in file tree
- Added extra sanity checks in Package Management in case transport zips are not extracted
- Make package grid update available Yes clickable to update
- Cleaned up and better abstracted modRestClient and modRestCurlClient code
- Fixed bug in setup during upgrade-advanced where DB information was not being checked correctly
- Lots of improvements to handling and caching of thumbnails in manager
- Fixed bug where reset filter on settings grid was not resetting to core namespace
- [#MODX-2178] Added missing settings and lexicon values for those settings to build/lexicons
- [#MODX-2179] Lexicons in Setup now use placeholders rather than sprintf for better i18n support
- Added phpthumb_imagemagick_path for users that need to change the imagemagick path for different environments
- [#MODX-2288] Dont duplicate TV Resource values when duplicating a TV unless explicitly told to
- [#MODX-2217] Persist sort order of Resource tree
- [#MODX-2291] Prevent editing of binary files to prevent zeroing out of file when saving
- [#MODX-2185] Resource tree expand all toolbar button now expands all levels deep
- [#MODX-2260] Added ability to rename ORM container nodes on extended fields
- [#MODX-2285] Added ability to dynamically set number of results for any grid in manager, as well as a default number via default_per_page system setting