@@ -544,6 +544,12 @@ class modInstall {
         $settings = $this->settings->fetch();
         $settings['last_install_time'] = time();
         $settings['site_id'] = uniqid('modx',true);
+
+        /* make UUID if not set */
+        if (empty($settings['uuid'])) {
+            $settings['uuid'] = $this->generateUUID();
+        }
+
         if (file_exists($configTpl)) {
             if ($tplHandle = @ fopen($configTpl, 'rb')) {
                 $content = @ fread($tplHandle, filesize($configTpl));
@@ -590,6 +596,19 @@ class modInstall {
             );
         }
         return $results;
+    }
+
+    /**
+     * Generates a random universal unique ID for identifying modx installs
+     *
+     * @return string A universally unique ID
+     */
+    public function generateUUID() {
+        srand(intval(microtime(true) * 1000));
+        $b = md5(uniqid(rand(),true),true);
+        $b[6] = chr((ord($b[6]) & 0x0F) | 0x40);
+        $b[8] = chr((ord($b[8]) & 0x3F) | 0x80);
+        return implode('-',unpack('H8a/H4b/H4c/H4d/H12e',$b));
     }
 
     /**
